--- a/static/css/EditJob.css
+++ b/static/css/EditJob.css
@@ -1,7 +1,3 @@
-#editJobBody {
-    margin: 2% 0;
-}
-
 #editJobBody hr {
     width: 70%;
     background-color: #000000;
