--- a/static/css/Profile.css
+++ b/static/css/Profile.css
@@ -1,12 +1,4 @@
-#profileBody {
-    margin: 2% auto;
-}
-
 #edit-profile button {
-    margin: 2% auto;
-}
-
-#editProfileBody {
     margin: 2% auto;
 }
 
