--- a/static/css/Sitemap.css
+++ b/static/css/Sitemap.css
@@ -1,7 +1,3 @@
-#sitemapBody {
-    margin: 4% 0;
-}
-
 #sitemapBody hr {
     background-color: #000000;
     width: 70%;
