--- a/static/css/Statistics.css
+++ b/static/css/Statistics.css
@@ -3,7 +3,6 @@
 }
 
 #statBody form {
-    margin: 5% 0;
     width: auto;
 }
 
