--- a/static/css/View.css
+++ b/static/css/View.css
@@ -2,10 +2,6 @@
   margin: 0;
 }
 
-#viewBody {
-  margin: 2% 0;
-}
-
 #filterForm {
   border: 1px solid black;
   border-radius: 12px;
